--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -6,7 +6,7 @@
       <div class="col-md-12">
         <h4>{{ contact.name }}</h4>
         <p class="mb-0">{{ contact.title }}</p>
-        <p class="mb-0">{{ contact.department }}</p>
+        <p class="mb-0 four" href="https://emia.hkust.edu.hk/">{{ contact.department }}</p>
         <p class="mb-0">{{ contact.institution }}</p>
         <p class="mb-0">{{ contact.institution_address }}</p>
         <p class="mb-0">Phone: {{ contact.phone }}</p>
