--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -7,10 +7,10 @@
         <h4>{{ contact.name }}</h4>
         <p class="mb-0">{{ contact.title }}</p>
         <p class="mb-0 four" href="https://emia.hkust.edu.hk/">{{ contact.department }}</p>
-        <p class="mb-0">{{ contact.institution }}</p>
-        <p class="mb-0">{{ contact.institution_address }}</p>
-        <p class="mb-0">Phone: {{ contact.phone }}</p>
+        <p class="mb-0 four" href="https://hkust.edu.hk/">{{ contact.institution }}</p>
         <p class="mb-0">Email: {{ contact.email }}</p>
+        <p class="mb-0">Phone: {{ contact.phone }}</p>
+        <p class="mb-0">Address: {{ contact.address }}</p>
         <p class="mb-0">Office: {{ contact.office }}</p>
       </div>
       <!--<div class="col-md-6">
