--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -6,8 +6,8 @@
       <div class="col-md-12">
         <h4>{{ contact.name }}</h4>
         <p class="mb-0">{{ contact.title }}</p>
-        <p class="mb-0 four" href="https://emia.hkust.edu.hk/">{{ contact.department }}</p>
-        <p class="mb-0 four" href="https://hkust.edu.hk/">{{ contact.institution }}</p>
+        <p class="mb-0"><a class="four" href="https://emia.hkust.edu.hk/">{{ contact.department }}</a></p>
+        <p class="mb-0"><a class="four" href="https://hkust.edu.hk/">{{ contact.institution }}</a></p>
         <p class="mb-0">Email: {{ contact.email }}</p>
         <p class="mb-0">Phone: {{ contact.phone }}</p>
         <p class="mb-0">Address: {{ contact.address }}</p>
