--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,9 +1,8 @@
 <div class="row g-5 mb-5">
-  <div>
+  <div class="col-md-12">
     <h3 class="fw-bold text-xl-center pb-3 mb-5">Contact Us</h3>
     {% for contact in site.data.settings.contacts %}
-    <div class="row mb-5">
-      <div class="col-md-12">
+      <div class="mb-3">
         <h4>{{ contact.name }}</h4>
         <p class="mb-0">{{ contact.title }}</p>
         <p class="mb-0"><a class="four" href="https://emia.hkust.edu.hk/">{{ contact.department }}</a></p>
@@ -12,10 +11,6 @@
         <p class="mb-0">Phone: {{ contact.phone }}</p>
         <p class="mb-0">Address: {{ contact.address }}</p>
       </div>
-      <!--<div class="col-md-6">
-        <img src="{{ site.github.url }}/{{ contact.image }}" alt="Contact" width="100%">
-      </div>-->
-    </div>
     {% endfor %}
   </div>
 </div>
