--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,6 +1,6 @@
 <div class="row g-5 mb-5">
   <div class="col-md-12">
-    <h3 class="fw-bold text-xl-center pb-3 mb-5">Contact Us</h3>
+    <h3 class="fw-bold text-xl-center mb-3">Contact Us</h3>
     {% for contact in site.data.settings.contacts %}
       <div class="mb-3">
         <h4>{{ contact.name }}</h4>
