--- a/_layouts/vacancies.html
+++ b/_layouts/vacancies.html
@@ -7,5 +7,6 @@ layout: default
 <div class="row g-5 mb-5">
   <div class="col-md-12">
     <h3 class="fw-bold text-xl-center mb-3">Open positions</h3>
+    <p class="mb-2"></p>
   </div>
 </div>
