--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: default
 <div class="row g-5 mb-5">
   <div class="col-md-12">
     <h3 class="fw-bold text-xl-center mb-3">Our Vision</h3>
-    <p class="justify">{{ content }}</p>
+    <p class="justify">We create a game-changing computational capability to reconstruct multiscale transport phenomena in gases and solids and enable *a priori* knowledge for emerging multiscale technologies. We bridge gaps among physics, applied mathematics, scientific computing and practical engineering-design simulation.</p>
   </div>
 </div>
 
