--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,43 +13,43 @@ layout: default
   <div class="col-md-12">
     <h3 class="fw-bold text-xl-center mb-3">Research</h3>
     <div class="grid-container border-bottom mt-3">
+      <div class="grid-item"><img class="rect_image" src="/assets/img/HeatConduction.png"></div>
       <div class="grid-item">
         <h6 class="fw-bold">Multiscale computation</h6>
         <p class="justify">
           We put forward a general synthetic iterative scheme (GSIS) for solving kinetic equations and simulating multiscale gas/phonon transport reliably. The scheme has the merits of fast convergence and asymptotic preserving, consequently reducing computational resource consumption by several orders of magnitude.
         </p>
       </div>
-      <div class="grid-item"><img class="rect_image" src="/assets/img/HeatConduction.png"></div>
     </div>
     <div class="grid-container border-bottom mt-3">
+      <div class="grid-item"><img class="rect_image" src="/assets/img/Circle_G_F.png"></div>
       <div class="grid-item">
         <h6 class="fw-bold">Discontinuous Galerkin method</h6>
         <p class="justify">
         We develop optimal solution strategies for the high-order discontinuous Galerkin methods adopted in the GSIS to make the simulation tool robust and economical for practical engineering-design simulations.
         </p>
       </div>
-      <div class="grid-item"><img class="rect_image" src="/assets/img/Circle_G_F.png"></div>
     </div>
     <div class="grid-container border-bottom mt-3">
+      <div class="grid-item"><img class="rect_image" src="/assets/img/Beam_F.png"></div>
       <div class="grid-item">
         <h6 class="fw-bold">Physics of transport phenomena</h6>
         <p class="justify">
         We utilise the developed methods and models to enable <span class="fst-italic">a priori</span> solutions of rarefied gas dynamics and non-Fourier solid heat conduction encountered in emerging multiscale technologies such as lab-on-chip devices, carbon neutrality, next-generation vaccines, micro air vehicles, and high-altitude flights.
         </p>
       </div>
-      <div class="grid-item"><img class="rect_image" src="/assets/img/Beam_F.png"></div>
     </div>
     <div class="grid-container border-bottom mt-3">
+      <div class="grid-item"><img class="rect_image" src="/assets/img/Capsule.png"></div>
       <div class="grid-item">
         <h6 class="fw-bold">Thermo-chemical relaxation</h6>
         <p class="justify">
         We develop sophisticated numerical methods to understand the nonequilibrium thermo-chemical relaxation that dictates the flow dynamics around re-entry capsules, allowing optimal designs of aerodynamic shape and heat shield.
         </p>
       </div>
-      <div class="grid-item"><img class="rect_image" src="/assets/img/Capsule.png"></div>
     </div>
 
-    <p class="mt-2 fst-italic"><a class="four" href="/research">read full research topics</a></p>
+    <!--<p class="mt-2 fst-italic"><a class="four" href="/research">read full research topics</a></p>-->
   </div>
 </div>
 
