--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,13 +1,13 @@
 <div class="row g-5 mb-5">
   <div class="col-md-12">
     {% if page.title == "Home" %}
-      <h3 class="fw-bold text-xl-center mb-3">Recent News</h3>
+      <h3 class="fw-bold mb-3">Recent News</h3>
       {% for post in site.posts limit: site.number_of_posts %}
         <p class="mb-1"><span>{{ post.date | date: "%B %-d, %Y" }}  </span><a class="four fw-bold" href="{{ post.url }}">{{ post.title }} >></a></p>
       {% endfor %}
       <p class="mt-2 fst-italic"><a class="four" href="/news">read more news</a></p>
     {% else %}
-      <h3 class="fw-bold text-xl-center mb-3">News</h3>
+      <h3 class="fw-bold mb-3">News</h3>
       {% for post in site.posts %}
         <p class="mb-3">
           <h5 class="fw-bold mb-0">{{ post.title }}</h5><span class="fst-italic">{{ post.date | date: "%B %-d, %Y" }}</span>
