--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,14 +4,14 @@ layout: default
 
 <div class="row g-5 mb-5">
   <div class="col-md-12">
-    <h3 class="fw-bold text-xl-center mb-3">Our Vision</h3>
+    <h3 class="fw-bold mb-3">Our Vision</h3>
     <p class="justify">We create a game-changing computational capability to reconstruct multiscale transport phenomena in gases and solids and enable <span class="fst-italic">a priori</span> knowledge for emerging multiscale technologies. We bridge gaps among physics, applied mathematics, scientific computing and practical engineering-design simulation.</p>
   </div>
 </div>
 
 <div class="row g-5 mb-5">
   <div class="col-md-12">
-    <h3 class="fw-bold text-xl-center mb-3">Research</h3>
+    <h3 class="fw-bold mb-3">Research</h3>
     <div class="grid-container border-bottom mt-3">
       <div class="grid-item"><img class="rect_image" src="/assets/img/HeatConduction.png"></div>
       <div class="grid-item">
