--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -11,6 +11,8 @@ layout: default
   {% for person in site.data.people.PI %}
   <div class="col-md-4">
     <div class="circular_image"><img src="{{ person.image }}" /></div>
+  </div>
+  <div class="col-md-8">
     <p class="mb-0 fw-bold">{{ person.name }}</p>
     <p class="mb-0">{{ person.title }}</p>
     <p class="mb-0">{{ person.degree }}</p>
