--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -100,7 +100,7 @@ a.four:hover, a.four:active {
 .grid-item{
   text-align: left;
   padding: 10px;
-  justify-self: center;
+  justify-self: start;
 }
 
 
