--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -13,8 +13,8 @@ layout: default
     <div class="circular_image"><img src="{{ person.image }}" /></div>
   </div>
   <div class="col-md-8">
-    <p class="mb-0 fw-bold">{{ person.name }}</p>
-    <p class="mb-0">{{ person.title }}</p>
+    <p class="mb-0 fw-bold">{{ person.title }} {{ person.name }}</p>
+    <p class="mb-0">{{ person.position }}</p>
     <p class="mb-0">{{ person.degree }}</p>
     <p class="mb-0">Email: {{ person.email }}</p>
     <p class="mb-0">Phone: {{ person.phone }}</p>
