--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -4,7 +4,7 @@ layout: default
 
 {{ content }}
 
-<div class="row g-5 mb-3">
+<div class="row g-5 mb-5">
 <div class="col-md-12">
   <h3 class="fw-bold mb-3">Research Team</h3>
   <h5 class="fw-bold mb-3">Principal Investigator</h5>
@@ -22,7 +22,12 @@ layout: default
     <p class="mb-0">More info: <a class="four" href="{{ person.cv }}">CV </a><a class="four" href="{{ person.googlescholar }}"><i class="fab fa-google"></i> </a><a class="four" href="{{ person.researchgate }}"><i class="fab fa-researchgate"></i> </a><a class="four" href="{{ person.linkdin }}"><i class="fab fa-linkedin"></i></a></p>
   </div>
 {% endfor %}
-  <h5 class="fw-bold text-xl-center mb-1"><a class="four" href="/vacancies">Join Us</a></h5>
+</div>
+</div>
+
+<div class="row g-5 mb-5">
+<div class="col-md-12">
+<h4 class="fw-bold mb-1"><a class="four" href="/vacancies">Join Us</a></h4>
 </div>
 </div>
 
