--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -9,17 +9,17 @@ layout: default
   <h3 class="fw-bold mb-3">Research Team</h3>
   <h5 class="fw-bold mb-3">Principal Investigator</h5>
   {% for person in site.data.people.PI %}
-  <div class="col-md-4">
-    <div class="circular_image"><img src="{{ person.image }}" /></div>
-  </div>
-  <div class="col-md-12">
-    <p class="mb-0 fw-bold">{{ person.title }} {{ person.name }}</p>
-    <p class="mb-0">{{ person.position }}</p>
-    <p class="mb-0">{{ person.degree }}</p>
-    <p class="mb-0">Email: {{ person.email }}</p>
-    <p class="mb-0">Phone: {{ person.phone }}</p>
-    <p class="mb-0">Room : {{ person.office }}</p>
-    <p class="mb-0">More info: <a class="four" href="{{ person.cv }}">CV </a><a class="four" href="{{ person.googlescholar }}"><i class="fab fa-google"></i> </a><a class="four" href="{{ person.researchgate }}"><i class="fab fa-researchgate"></i> </a><a class="four" href="{{ person.linkdin }}"><i class="fab fa-linkedin"></i></a></p>
+  <div class="grid-container border-bottom mt-3">
+    <div class="grid-item"><img class="circular_image" src="{{ person.image }}" /></div>
+    <div class="grid-item">
+      <p class="mb-0 fw-bold">{{ person.title }} {{ person.name }}</p>
+      <p class="mb-0">{{ person.position }}</p>
+      <p class="mb-0">{{ person.degree }}</p>
+      <p class="mb-0">Email: {{ person.email }}</p>
+      <p class="mb-0">Phone: {{ person.phone }}</p>
+      <p class="mb-0">Room : {{ person.office }}</p>
+      <p class="mb-0">More info: <a class="four" href="{{ person.cv }}">CV </a><a class="four" href="{{ person.googlescholar }}"><i class="fab fa-google"></i> </a><a class="four" href="{{ person.researchgate }}"><i class="fab fa-researchgate"></i> </a><a class="four" href="{{ person.linkdin }}"><i class="fab fa-linkedin"></i></a></p>
+    </div>
   </div>
 {% endfor %}
 </div>
