--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -17,7 +17,7 @@ layout: default
       <p class="mb-0">{{ person.degree }}</p>
       <p class="mb-0">Email: {{ person.email }}</p>
       <p class="mb-0">Phone: {{ person.phone }}</p>
-      <p class="mb-0">Room : {{ person.office }}</p>
+      <p class="mb-0">Address: {{ person.institution }}, {{ person.address }}</p>
       <p class="mb-0">More info: <a class="four" href="{{ person.cv }}">CV </a><a class="four" href="{{ person.googlescholar }}"><i class="fab fa-google"></i> </a><a class="four" href="{{ person.researchgate }}"><i class="fab fa-researchgate"></i> </a><a class="four" href="{{ person.linkdin }}"><i class="fab fa-linkedin"></i></a></p>
     </div>
   </div>
