--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -14,7 +14,7 @@ layout: default
     <div class="grid-item">
       <p class="mb-0 fw-bold">{{ person.title }} {{ person.name }}</p>
       <p class="mb-0">{{ person.position }}, {{ person.department }}</p>
-      <p class="mb-0">{{ person.degree }}</p>
+      <!--<p class="mb-0">{{ person.degree }}</p>-->
       <p class="mb-0">Email: {{ person.email }}</p>
       <p class="mb-0">Phone: {{ person.phone }}</p>
       <p class="mb-0">Address: {{ person.institution }}, {{ person.address }}</p>
