--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@ layout: default
     <h3 class="fw-bold mb-3">Research</h3>
     <div class="grid-container border-bottom mt-3">
       <div class="grid-item"><img class="rect_image" src="/assets/img/HeatConduction.png"></div>
-      <div class="grid-item">
+      <div class="grid-item wide">
         <h6 class="fw-bold">Multiscale computation</h6>
         <p class="justify">
           We put forward a general synthetic iterative scheme (GSIS) for solving kinetic equations and simulating multiscale gas/phonon transport reliably. The scheme has the merits of fast convergence and asymptotic preserving, consequently reducing computational resource consumption by several orders of magnitude.
