--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -95,12 +95,16 @@ a.four:hover, a.four:active {
 
 .grid-container{
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: repeat(autofit, minmax(200px, 1fr));
+  grid-auto-flow: dense;
 }
 .grid-item{
   text-align: left;
   padding: 10px;
   justify-self: start;
+}
+.wide{
+  grid-column: span 2;
 }
 
 
