--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -95,7 +95,7 @@ a.four:hover, a.four:active {
 
 .grid-container{
   display: grid;
-  grid-template-columns: repeat(autofit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-auto-flow: dense;
 }
 .grid-item{
