--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -11,7 +11,7 @@ layout: default
   {% for person in site.data.people.PI %}
   <div class="grid-container border-bottom mt-3">
     <div class="grid-item"><img class="circular_image" src="{{ person.image }}" /></div>
-    <div class="grid-item">
+    <div class="grid-item wide">
       <p class="mb-0 fw-bold">{{ person.title }} {{ person.name }}</p>
       <p class="mb-0">{{ person.position }}, {{ person.department }}</p>
       <!--<p class="mb-0">{{ person.degree }}</p>-->
