--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,7 +23,7 @@ layout: default
     </div>
     <div class="grid-container border-bottom mt-3">
       <div class="grid-item"><img class="rect_image" src="/assets/img/Circle_G_F.png"></div>
-      <div class="grid-item">
+      <div class="grid-item wide">
         <h6 class="fw-bold">Discontinuous Galerkin method</h6>
         <p class="justify">
         We develop optimal solution strategies for the high-order discontinuous Galerkin methods adopted in the GSIS to make the simulation tool robust and economical for practical engineering-design simulations.
@@ -32,7 +32,7 @@ layout: default
     </div>
     <div class="grid-container border-bottom mt-3">
       <div class="grid-item"><img class="rect_image" src="/assets/img/Beam_F.png"></div>
-      <div class="grid-item">
+      <div class="grid-item wide">
         <h6 class="fw-bold">Physics of transport phenomena</h6>
         <p class="justify">
         We utilise the developed methods and models to enable <span class="fst-italic">a priori</span> solutions of rarefied gas dynamics and non-Fourier solid heat conduction encountered in emerging multiscale technologies such as lab-on-chip devices, carbon neutrality, next-generation vaccines, micro air vehicles, and high-altitude flights.
@@ -41,7 +41,7 @@ layout: default
     </div>
     <div class="grid-container border-bottom mt-3">
       <div class="grid-item"><img class="rect_image" src="/assets/img/Capsule.png"></div>
-      <div class="grid-item">
+      <div class="grid-item wide">
         <h6 class="fw-bold">Thermo-chemical relaxation</h6>
         <p class="justify">
         We develop sophisticated numerical methods to understand the nonequilibrium thermo-chemical relaxation that dictates the flow dynamics around re-entry capsules, allowing optimal designs of aerodynamic shape and heat shield.
