--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: default
 <div class="row g-5 mb-5">
   <div class="col-md-12">
     <h3 class="fw-bold mb-3">Our Vision</h3>
-    <p class="justify">We create a game-changing computational capability to reconstruct multiscale transport phenomena in gases and solids and enable <span class="fst-italic">a priori</span> knowledge for emerging multiscale technologies. We bridge gaps among physics, applied mathematics, scientific computing and practical engineering-design simulation.</p>
+    <p>We create a game-changing computational capability to reconstruct multiscale transport phenomena in gases and solids and enable <span class="fst-italic">a priori</span> knowledge for emerging multiscale technologies. We bridge gaps among physics, applied mathematics, scientific computing and practical engineering-design simulation.</p>
   </div>
 </div>
 
@@ -16,7 +16,7 @@ layout: default
       <div class="grid-item"><img class="rect_image" src="/assets/img/HeatConduction.png"></div>
       <div class="grid-item wide">
         <h6 class="fw-bold">Multiscale computation</h6>
-        <p class="justify">
+        <p>
           We put forward a general synthetic iterative scheme (GSIS) for solving kinetic equations and simulating multiscale gas/phonon transport reliably. The scheme has the merits of fast convergence and asymptotic preserving, consequently reducing computational resource consumption by several orders of magnitude.
         </p>
       </div>
@@ -25,7 +25,7 @@ layout: default
       <div class="grid-item"><img class="rect_image" src="/assets/img/Circle_G_F.png"></div>
       <div class="grid-item wide">
         <h6 class="fw-bold">Discontinuous Galerkin method</h6>
-        <p class="justify">
+        <p>
         We develop optimal solution strategies for the high-order discontinuous Galerkin methods adopted in the GSIS to make the simulation tool robust and economical for practical engineering-design simulations.
         </p>
       </div>
@@ -34,7 +34,7 @@ layout: default
       <div class="grid-item"><img class="rect_image" src="/assets/img/Beam_F.png"></div>
       <div class="grid-item wide">
         <h6 class="fw-bold">Physics of transport phenomena</h6>
-        <p class="justify">
+        <p>
         We utilise the developed methods and models to enable <span class="fst-italic">a priori</span> solutions of rarefied gas dynamics and non-Fourier solid heat conduction encountered in emerging multiscale technologies such as lab-on-chip devices, carbon neutrality, next-generation vaccines, micro air vehicles, and high-altitude flights.
         </p>
       </div>
@@ -43,7 +43,7 @@ layout: default
       <div class="grid-item"><img class="rect_image" src="/assets/img/Capsule.png"></div>
       <div class="grid-item wide">
         <h6 class="fw-bold">Thermo-chemical relaxation</h6>
-        <p class="justify">
+        <p>
         We develop sophisticated numerical methods to understand the nonequilibrium thermo-chemical relaxation that dictates the flow dynamics around re-entry capsules, allowing optimal designs of aerodynamic shape and heat shield.
         </p>
       </div>
