--- a/_layouts/vacancies.html
+++ b/_layouts/vacancies.html
@@ -6,7 +6,7 @@ layout: default
 
 <div class="row g-5 mb-5">
   <div class="col-md-12">
-    <h3 class="fw-bold mb-3">Open positions</h3>
+    <h3 class="fw-bold mb-3">Open Positions</h3>
     <p class="mb-2">Two funded positions for PhD students are available in our group. Please drop me an email if you are interested. Candidates with strong backgrounds in (one or more) areas of physics, applied mathematics, aerospace engineering, aerothermodynamics, and CFD are highly welcome.</p>
   </div>
 </div>
