--- a/_layouts/vacancies.html
+++ b/_layouts/vacancies.html
@@ -8,5 +8,6 @@ layout: default
   <div class="col-md-12">
     <h3 class="fw-bold mb-3">Open Positions</h3>
     <p class="mb-2">Two funded positions for PhD students are available in our group. Please drop me an email if you are interested. Candidates with strong backgrounds in (one or more) areas of physics, applied mathematics, aerospace engineering, aerothermodynamics, rarefied gas dynamics and CFD are highly welcome.</p>
+    <p class="mb-2">HKUST ranked 34 in QS World Universitty Rankings 2022. The PhD program duration is 3 years for candiates with a relevant research master degree and 4 years for whom without a research master degree.</p>
   </div>
 </div>
