--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,7 +35,7 @@ layout: default
       <div class="grid-item wide">
         <h6 class="fw-bold">Physics of transport phenomena</h6>
         <p>
-        We utilise the developed methods and models to enable <span class="fst-italic">a priori</span> solutions of rarefied gas dynamics and non-Fourier solid heat conduction encountered in emerging multiscale technologies such as lab-on-chip devices, carbon neutrality, next-generation vaccines, micro air vehicles, and high-altitude flights.
+        We utilise the developed methods and models to enable <span class="fst-italic">a priori</span> solutions for the rarefied gas dynamics and non-Fourier solid heat conduction in emerging multiscale technologies such as lab-on-chip devices, carbon neutrality, next-generation vaccines, micro air vehicles, and high-altitude flights.
         </p>
       </div>
     </div>
