--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -22,6 +22,7 @@ layout: default
       <p class="mb-0">More info: <a class="four" href="{{ person.cv }}">CV </a><a class="four" href="{{ person.googlescholar }}"><i class="fab fa-google"></i> </a><a class="four" href="{{ person.researchgate }}"><i class="fab fa-researchgate"></i> </a><a class="four" href="{{ person.linkdin }}"><i class="fab fa-linkedin"></i></a></p>
     </div>
   </div>
+  <h5 class="fw-bold mb-3">Postdoc & RA</h5>
 {% endfor %}
 </div>
 </div>
