--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -7,7 +7,7 @@ layout: default
 <div class="row g-5 mb-5">
 <div class="col-md-12">
   <h3 class="fw-bold mb-3">Research Team</h3>
-  <h5 class="fw-bold mb-3">Principal Investigator</h5>
+  <h5 class="fw-bold">Principal Investigator</h5>
   {% for person in site.data.people.PI %}
   <div class="grid-container border-bottom mt-3">
     <div class="grid-item"><img class="circular_image" src="{{ person.image }}" /></div>
