--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -7,9 +7,9 @@ layout: default
 <div class="row g-5 mb-5">
 <div class="col-md-12">
   <h3 class="fw-bold mb-3">Research Team</h3>
-  <h5 style="color:#313695">Principal Investigator</h5>
+  <h5 class="fw-bold mb-3">Principal Investigator</h5>
   {% for person in site.data.people.PI %}
-  <div class="grid-container border-bottom mt-3">
+  <div class="grid-container mt-3">
     <div class="grid-item"><img class="circular_image" src="{{ person.image }}" /></div>
     <div class="grid-item wide">
       <p class="mb-0"><span class=" fw-bold">{{ person.title }} {{ person.name }}</span><span>, {{ person.position }}</span></p>
@@ -23,9 +23,9 @@ layout: default
     </div>
   </div>
   {% endfor %}
-  <h5 style="color:#313695">Postdoc & RA</h5>
+  <h5 class="fw-bold mb-3">Postdoc & RA</h5>
   {% for person in site.data.people.Postdoc %}
-  <div class="grid-container border-bottom mt-3">
+  <div class="grid-container mt-3">
     <div class="grid-item"><img class="circular_image" src="{{ person.image }}" /></div>
     <div class="grid-item wide">
       <p class="mb-0"><span class=" fw-bold">{{ person.title }} {{ person.name }}</span></p>
