--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -15,10 +15,10 @@ layout: default
       <p class="mb-0"><span class=" fw-bold">{{ person.title }} {{ person.name }}</span><span>, {{ person.position }}</span></p>
       <p class="mb-0">{{ person.department }}</p>
       <!--<p class="mb-0">{{ person.degree }}</p>-->
-      <p class="mb-0">Email: {{ person.email }}</p>
+      <p class="mb-0">Email: <a class="four" href="mailto: {{ person.email }}">{{ person.email }}</a></p>
       <p class="mb-0">Phone: {{ person.phone }}</p>
       <p class="mb-0">Office: {{ person.office }} </p>
-      <p class="mb-0">Address: {{ person.institution }}, {{ person.address }}</p>
+      <!--<p class="mb-0">Address: {{ person.institution }}, {{ person.address }}</p>-->
       <p class="mb-0">More info: <a class="four" href="{{ person.cv }}">CV </a><a class="four" href="{{ person.googlescholar }}"><i class="fab fa-google"></i> </a><a class="four" href="{{ person.researchgate }}"><i class="fab fa-researchgate"></i> </a><a class="four" href="{{ person.linkdin }}"><i class="fab fa-linkedin"></i></a></p>
     </div>
   </div>
