--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -23,7 +23,7 @@ layout: default
     </div>
   </div>
   {% endfor %}
-  <h5 class="fw-bold mb-3">Postdoc & RA</h5>
+  <!--<h5 class="fw-bold mb-3">Postdoc & RA</h5>
   {% for person in site.data.people.Postdoc %}
   <div class="grid-container mt-3">
     <div class="grid-item"><img class="circular_image" src="{{ person.image }}" /></div>
@@ -35,7 +35,7 @@ layout: default
       <p class="mb-0">Email: <a class="four" href="mailto: {{ person.email }}">{{ person.email }}</a></p>
       <p class="mb-0">Research: {{ person.topic }}</p>
     </div>
-  </div>
+  </div>-->
   {% endfor %}
   <h5 class="fw-bold mb-3">PhD Students</h5>
   {% for person in site.data.people.PhD %}
