--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -35,8 +35,8 @@ layout: default
       <p class="mb-0">Email: <a class="four" href="mailto: {{ person.email }}">{{ person.email }}</a></p>
       <p class="mb-0">Research: {{ person.topic }}</p>
     </div>
-  </div>-->
-  {% endfor %}
+  </div>
+  {% endfor %}-->
   <h5 class="fw-bold mb-3">PhD Students</h5>
   {% for person in site.data.people.PhD %}
   <div class="grid-container mt-3">
